# ZJU24_Algo_in_game

./: CMakeLists.txt  README.md  battle.c  battle.h  card.c  card.h  character.c  character.h  draw.c  draw.h  game.txt  interface.c  interface.h  main.c
include/: graphics.h
libgraphics/: graphics.c
